# tdmcpagentcore

./: .bedrock_agentcore.yaml  .bedrock_agentcore.yaml.original  .env.example  .gitignore  AGENTCORE_DEPLOYMENT.md  README.md  SECURITY_CONFIG.md  TROUBLESHOOTING.md  agent.py  agentcore_demo.py  banking_router_agent.py  credit_risk_agent.py  customer_retention_agent.py  main.py  minimal_requirements.txt  pretty_invoke.py  pyproject.toml  requirements.txt  setup_agentcore.sh  simple_requirements.txt  wealth_management_agent.py  zip.bat  zip.py
.bedrock_agentcore/agent/: Dockerfile
