[project]
name = "tdmcpagentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.1.1",
    "botocore[crt]>=1.42.3",
    "mcp>=1.22.0",
    "strands-agents>=1.19.0",
    "teradata-mcp-server>=0.1.0",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.2",
]
